# alpha-oracle

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
config/: prometheus.yml  risk_limits.yaml  settings.yaml  sp400_fallback.csv  sp500_fallback.csv  sp600_fallback.csv
docs/: _config.yml  feature-specs.md  index.md  roadmap.md
docs/adrs/: 001-trading-platform.md  002-market-data-strategy.md  006-technology-stack.md  008-llm-agent-integration.md  010-ibkr-broker-switch.md
docs/developer-guide/: adrs.md  glossary.md  index.md
docs/user-guide/: getting-started.md  glossary.md  index.md  quick-start.md
models/: v20260313_214343.joblib
scripts/: backfill_history.py  backfill_history_yf.py  clear_database.sh  init_db.sql  restart-backend.sh  restart-frontend.sh  seed_demo_data.py  start-all.sh  start-backend.sh  start-frontend.sh  stop-all.sh  stop-backend.sh  stop-frontend.sh
specs/: feature-specs.md  roadmap.md
specs/adrs/: 003-ml-model-architecture.md  004-alternative-data.md  005-backtesting.md  007-architecture.md  009-risk-management.md
src/agents/: __init__.py  advisor.py  analyst.py  base.py  briefing.py  client.py  context.py  cost_tracker.py  guardrails.py  rate_limiter.py  sentiment_scorer.py
src/api/: dependencies.py  main.py
src/core/: __init__.py  config.py  database.py  interfaces.py  models.py  redis.py
src/execution/: __init__.py  engine.py  order_generator.py  quality.py  router.py  tracker.py
src/monitoring/: __init__.py  alerts.py  metrics.py
src/risk/: __init__.py  autonomy_validator.py  circuit_breaker.py  kill_switch.py  llm_guardrails.py  manager.py  pdt_guard.py  portfolio_monitor.py  pre_trade.py  reconciliation.py
src/scheduling/: jobs.py  scheduler.py
src/signals/: __init__.py  confidence.py  feature_store.py  ml_strategy.py
src/strategy/: __init__.py  engine.py  monte_carlo.py  optimizer.py  ranker.py  regime.py
tests/: conftest.py
tests/unit/: test_advisor_agent.py  test_agent_guardrails.py  test_agent_rate_limiter.py  test_alpaca_broker_adapter.py  test_jobs.py  (+60 more)
web/: package-lock.json  package.json  vite.config.ts
(+125 files in other folders)
