[project]
name = "stock-analysis"
version = "0.1.0"
description = "AI-driven automated stock trading system"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",

    # Data
    "alpaca-py>=0.21,<1",
    "alpha-vantage>=2.3,<3",
    "requests>=2.31,<3",
    "aiohttp>=3.9,<4",
    "pandas>=2.1,<3",
    "polars>=0.20,<1",
    "pyarrow>=14,<18",

    # Database
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "duckdb>=0.10,<2",
    "redis>=5.0,<6",
    "alembic>=1.13,<2",

    # Strategy & Backtesting
    "backtrader>=1.9,<2",
    "vectorbt>=0.26,<1",
    "ta-lib>=0.4,<1;python_version<'3.13'",
    "pandas-ta>=0.3,<1",

    # ML
    "scikit-learn>=1.3,<2",
    "xgboost>=2.0,<3",
    "optuna>=3.4,<4",

    # API
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.25,<1",
    "websockets>=12,<14",

    # Orchestration
    "prefect>=2.14,<3",

    # Monitoring
    "prometheus-client>=0.19,<1",

    # Notifications
    "slack-sdk>=3.26,<4",
    "python-telegram-bot>=20.7,<22",

    # Utilities
    "httpx>=0.26,<1",
    "tenacity>=8.2,<10",
    "structlog>=23.2,<25",
    "rich>=13.7,<14",
    "click>=8.1,<9",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "hypothesis>=6.92,<7",
    "ruff>=0.1,<1",
    "mypy>=1.8,<2",
    "pre-commit>=3.6,<4",
]
ml-advanced = [
    "torch>=2.1,<3",
    "transformers>=4.36,<5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
